--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/hxu0vzl.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,7 +21,7 @@
   [multiple],
   textarea,
   select {
-    @apply placeholder:text-gray-300 font-custom text-toodark font-bold border-none focus:ring-2 focus:ring-toodark
+    @apply placeholder:text-gray-300 outline-none text-toodark font-bold border-none focus:border-none focus:ring-2 focus:ring-toodark
   }
 
   [type='checkbox'],
